Add user-select: none; style

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,14 @@ a {
 	user-select: none;
 }
 
+p {
+	user-select: none;
+}
+
+img {
+	user-select: none;
+}
+
 .elementlist_dragging {
 	background-color: rgba(255, 68, 55, 0.3);
 }
